adjust bg color for better visibilty of css issues

--- a/PlayChess/static/CSS/chessboard.css
+++ b/PlayChess/static/CSS/chessboard.css
@@ -49,7 +49,7 @@ table {
 }
 
 body {
-    background-color: white;
+    background-color: black;
 }
 .square {
     display: block;
